--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -34,3 +34,13 @@
     gap: 48px;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .header-section{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+}
