--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -23,9 +23,11 @@
     padding-left: 10px;
     border-radius: 5px;
     border: #D7E0EB 1px solid;
+    box-shadow: 0px 8px 4px  #0D111B14;
+    
 }
 input:focus-visible {
-  outline: 2px solid #008B57
+  outline: 2px solid #008B57;
 }
 
 .group-input{
